--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,11 @@
   height: 40vmin;
 }
 
+.loading-spinner.small {
+  width: 50px;
+  height: 50px;
+}
+
 .app-wrapper {
   background-color: #282c34;
   min-height: 100vh;
